[package]
name = "timeless"
version = "0.0.12-alpha"
edition = "2021"
authors = ["Clement Tsang <cjhtsang@uwaterloo.ca>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ClementTsang/timeless"
description = "A crate of utilities for storing in-memory timeseries data."
readme = "README.md"
categories = []
keywords = []
exclude = [".github", "CHANGELOG.md"]

[lib]
test = true
doctest = true
doc = true

[dependencies]
# No dependencies!

[lints.rust]
rust_2018_idioms = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"
