[package]
name = "timeless"
version = "0.0.14-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ClementTsang/timeless"
description = "A crate of utilities for storing in-memory timeseries data."
readme = "README.md"
documentation = "https://docs.rs/timeless/"
authors = ["Clement Tsang <cjhtsang@uwaterloo.ca>"]
categories = []
keywords = []
exclude = [
    ".github/",
    ".idea",
    ".vscode/",
    ".gitignore",
    ".markdownlint.json",
    "CHANGELOG.md",
    "clippy.toml",
    "rustfmt.toml",
]

[lib]
test = true
doctest = true
doc = true

[dependencies]
# No dependencies!

[lints.rust]
rust_2018_idioms = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"
